<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/tv_tabCarros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carros"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_tabFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_tabCarros"
        app:layout_constraintTop_toTopOf="@id/tv_tabCarros"/>

    <ImageView
        android:id="@+id/im_car"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/carro"
        app:layout_constraintTop_toBottomOf="@id/tv_tabCarros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_preco_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="Preço"
        app:layout_constraintTop_toBottomOf="@id/im_car"/>
    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RS 3.00"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@+id/tv_preco_label"
        app:layout_constraintTop_toTopOf="@id/tv_preco_label"/>

    <TextView
        android:id="@+id/tv_bateria_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="Bateria"
        app:layout_constraintTop_toBottomOf="@id/tv_preco_label"/>
    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 kwh"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@+id/tv_bateria_label"
        app:layout_constraintTop_toTopOf="@id/tv_bateria_label"/>
slkcjvsadlknvlsdk
    <TextView
        android:id="@+id/tv_potencia_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="Bateria"
        app:layout_constraintTop_toBottomOf="@id/tv_preco_label"/>
    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 kwh"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@+id/tv_bateria_label"
        app:layout_constraintTop_toTopOf="@id/tv_bateria_label"/>

    <TextView
        android:id="@+id/tv_recarga_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="Recarga"
        app:layout_constraintTop_toBottomOf="@id/tv_preco_label"/>
    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23 min"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@+id/tv_bateria_label"
        app:layout_constraintTop_toTopOf="@id/tv_bateria_label"/>

</androidx.constraintlayout.widget.ConstraintLayout>